--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["David <oconned6@tcd.ie>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 pandas = "^1.4.2"
+scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
