--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["David <oconned6@tcd.ie>"]
 python = ">=3.9,<3.11"
 pandas = "^1.4.2"
 scipy = "^1.8.0"
+matplotlib = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
