--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,13 @@
-[tool.poetry]
-name = "uv_spec"
+[project]
+name = "uv-spec"
 version = "0.1.0"
-description = ""
-authors = ["David <oconned6@tcd.ie>"]
-
-[tool.poetry.dependencies]
-python = ">=3.9,<3.11"
-pandas = "^1.4.2"
-scipy = "^1.8.0"
-matplotlib = "^3.5.2"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^22.3.0"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "matplotlib>=3.9.2",
+    "pandas>=2.2.3",
+    "pyqt6>=6.7.1",
+    "ruff>=0.7.2",
+    "scipy>=1.14.1",
+]
